
Datatest Changelog
==================

COMING SOON (0.9.2)
-------------------

* Added Query.flatten() to serialize dictionaries and other mappings.
* Added Query.to_csv() to quickly save query results as a CSV file.
* Fixed get_reader() bug that prevented encoding-fallback recovery when
  reading from StringIO buffers in Python 2.
* Added CompositeSelector and CompositeQuery to provide a concise interface
  for running the same query against multiple data sources (a common need
  when comparing against reference data).


2018-06-21 (0.9.1)
------------------

* Added impoved docstrings and other documentation.
* Changed bundled pytest plugin to version 0.1.2:
    * Added handling for a 'mandatory' marker to support
      incremental testing (stops session early when a mandatory
      test fails).
    * Added '--ignore-mandatory' option to continue tests
      even when a mandatory test fails.


2018-04-29 (0.9.0)
------------------

* Added a bundled version of the pytest plugin to the base installation.
* Added universal composability for all allowances (using UNION and
  INTERSECTION via "|" and "&" operators).
* Added ``allowed`` factory class to simplify allowance imports.
* Changed is_valid() to valid().
* Changed ValidationError to display differences in sorted order.
* Added Python 2 and 3 compatible get_reader() to quickly load
  csv.reader-like interface for Unicode CSV, MS Excel, pandas.DataFrame,
  DBF, etc.
* Added formal order of operations for allowance resolution.
* Added formal predicate object handling.
* Added Sphinx-tabs style docs for clear separation of pytest and
  unittest style examples.
* Changed DataSource to Selector, DataQuery to Query, and DataResult to
  Result.


2017-11-26 (0.8.3)
------------------

* Added module-level functions: validate() and is_valid().
* Changed DataQuery selections now default to a list type when no
  outer-container is specified.
* Added DataQuery.apply() method for group-wise function application.